[[example]]
name = "dialect"

[package]
name = "queryer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.71"
polars = { version = "0.31.1", features = ["json", "lazy"] }
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls"] }
sqlparser = "0.35.0"
tokio = { version = "1.29.1", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[build-dependencies]
tokio = { version = "1.29.1", features = ["full"] }
tracing-subscriber = "0.3.17"
