[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
base64 = "0.21.2"
bytes = "1.4.0"
image = "0.24.6"
lazy_static = "1.4.0"
lru = "0.11.0"
percent-encoding = "2.3.0"
photon-rs = "0.3.2"
prost = "0.11.9"
reqwest = "0.11.18"
serde = { version = "1.0.171", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.4.1", features = ["add-extension", "compression-full", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[build-dependencies]
prost-build = "0.11.9"
