[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive"] }
colored = "2.0.4"
jsonxf = "1.1.1"
mime = "0.3.17"
reqwest = { version = "0.11.18", features = ["json"] }
syntect = "5.0.0"
tokio = { version = "1.29.1", features = ["full"] }
