[package]
name = "kv_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name="client"

[[example]]
name="server"


[dependencies]
bytes = "1.4.0"
dashmap = "5.5.0"
http = "0.2.9"
prost = "0.9"
thiserror = "1.0.44"
tracing = "0.1.37"

[build-dependencies]
prost-build = "0.11.9"

[dev-dependencies]
anyhow = "1.0.72"
async-prost = "0.3.0"
futures = "0.3.28"
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "io-util", "macros", "net"] }
tracing-subscriber = "0.3.17"
