[package]
name = "rgrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = "4.3.21"
colored = "2.0.4"
glob = "0.3.1"
itertools = "0.11.0"
rayon = "1.7.0"
regex = "1.9.3"
thiserror = "1.0.44"

[[bin]]
name = "rgrep"
path = "src/main.rs"

[lib]
name = "rgrep"
path = "src/lib.rs"
