[package]
name = "thumbor_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
base64 = "0.21.5"
percent-encoding = "2.3.1"
photon-rs = "0.3.2"
prost = "0.12.3"
reqwest = "0.11.22"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
tracing-subscriber = "0.3.18"

[build-dependencies]
prost-build = "0.12.3"
